tests/baselines/reference/constraintReferencingTypeParameterFromSameTypeParameterList.errors.txt
==== tests/cases/compiler/constraintReferencingTypeParameterFromSameTypeParameterList.ts (5 errors) ====
    // used to be valid, now an error to do this
    
    interface IComparable<T> {
    }
    function f<T, I extends IComparable<T>>() {
                  ~~~~~~~~~~~~~~~~~~~~~~~~
!!! constraintReferencingTypeParameterFromSameTypeParameterList.ts(5,15): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    }
    
    interface I1<T, U extends I1<T, any>> { // Error, any does not satisfy the constraint I1<T, any>
                    ~~~~~~~~~~~~~~~~~~~~
!!! constraintReferencingTypeParameterFromSameTypeParameterList.ts(8,17): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    }
    interface I2<T, U extends T> {
                    ~~~~~~~~~~~
!!! constraintReferencingTypeParameterFromSameTypeParameterList.ts(10,17): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    }
    
    interface I4<T, U extends () => T> {
                    ~~~~~~~~~~~~~~~~~
!!! constraintReferencingTypeParameterFromSameTypeParameterList.ts(13,17): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    }
    
    // No error
    interface I3<T, U extends string> {
        method1<X, Y extends T>();
    }
    
    function foo<T, U extends <V extends T>(v: V) => void>() {
                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! constraintReferencingTypeParameterFromSameTypeParameterList.ts(21,17): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    }
    
    